tests/error/type_as_func.ca

def main()
  Vec2([0 0])

vm = make_vm(main)
vm.run

assert(vm.has_error)
